# NoName

./: CMakeLists.txt  README.md  main.cpp
WindowsBuild/: engine
WindowsBuild/Polygons/: PolygonDataFile.polygon
experiments/: arrow.ggb  cursor.ggb  experiment1.ggb  main_character.ggb
include/: DrawingFunctions.cpp  DrawingFunctions.h  InitOpenGL.cpp  InitOpenGL.h  MyBaseOperations.cpp  MyBaseOperations.h  OpenGLEventHandler.cpp  OpenGLEventHandler.h  StandartIncludes.cpp  StandartIncludes.h  includes.h
include/MyGeometry/: MyAngle.cpp  MyAngle.h  MyCircle.cpp  MyCircle.h  MyComplexShapes.cpp  MyComplexShapes.h  MyFlatAngle.cpp  MyFlatAngle.h  MyGeometry.cpp  MyGeometry.h  MyLine.cpp  MyLine.h  MyMatrixes.cpp  MyMatrixes.h  MyPoint.cpp  MyPoint.h  MyPolygon.cpp  MyPolygon.h  MyRectan.cpp  MyRectan.h  MySegment.cpp  MySegment.h  MyTriangle.cpp  MyTriangle.h
include/Objects/: MyObject.cpp  MyObject.h  objects.cpp  objects.h
includes/: DrawingFunctions.h  InitOpenGL.h  MyMatrixes.h  OpenGLEventsHandler.h  includes.h
includes/MyGeometry/: MyAngle.h  MyBaseOperations.h  MyCircle.h  MyComplexShape.h  MyGeometry.h  MyLine.h  MyPoint.h  MyPolygon.h  MyRectan.h  MySegment.h  MyTriangle.h
includes/Objects/: MyObject.h  objects.h
